# interpolate

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
interpolate/: interpolate.py
tests/: test_functional.py  test_interpolate.py
