[tool.poetry]
name = "interpolate"
version = "0.1.0"
description = ""
authors = ["Chris Ramshaw <chris.ramshaw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
isort = "^5.0.3"
flake8 = "^3.8.3"

[tool.poetry.scripts]
int = "interpolate.interpolate:main"

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[tool.pytest]
python_files="tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

